--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-dark text-light p-0">
+    <div class="container-fluid bg-dark text-light p-0" >
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
@@ -244,7 +244,7 @@ However, Felicia is best known for her work in the web video world. She co-starr
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Get In Touch</h4>
-                    <h2 class="text-primary mb-4"><i class="fa fa-car text-white me-2"></i>Drivin</h2>
+                    <h2 class="text-primary mb-4"><i class="fa fa-car text-white me-2"></i>Felicia</h2>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
