--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,7 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="reels.html" class="nav-item nav-link">Reels</a>
+                <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
