--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@ Felicia has over 6 million followers across social platforms.</p>
     <div class="container-xxl courses my-6 py-6 pb-0">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-6 mb-4" style="text-align: left, font-family: 'Pacifico', cursive; font-size: 60px; color: rgb(122, 127, 148);"><i>Projects</i></h1>
-                 <h6  style="text-align: left, color: black">Interested in what Felicia’s working on?</h6>
+                <h1 class="display-6 mb-4" style="text-align: left, font-family 'Pacifico', cursive; font-size: 60px; color: rgb(122, 127, 148);"><i>Projects</i></h1>
+                 <h6  style="text-align: left, color black">Interested in what Felicia’s working on?</h6>
 
             </div>
             <div class="row g-4 justify-content-center">
@@ -227,7 +227,7 @@ Felicia has over 6 million followers across social platforms.</p>
                 </div>
                 <div class="col-lg-8 my-6 mb-0 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="bg-primary-color:#757575 text-center p-5">
-                        <h1 class="mb-4"  style="text-align: left, font-family: 'Pacifico', cursive; font-size: 40px; color: rgb(122, 127, 148);">Appearances</h1>
+                        <h1 class="mb-4"  style="text-align: left, font-family 'Pacifico', cursive; font-size: 40px; color: rgb(122, 127, 148);">Appearances</h1>
                         <form>
                             <div class="row g-3">
                                 <div class="col-sm-6">
