--- a/reels.html
+++ b/reels.html
@@ -103,7 +103,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s"style="background-image: url('https://raw.githubusercontent.com/Shanila-Khan/FinalProject/master/img/felicia-headshot-1024x1024.png'); background-size: cover; background-position: center;">
         <div class="container text-center">
             <h1 class="display-4 text-white animated slideInDown mb-4">Reels</h1>
             <nav aria-label="breadcrumb animated slideInDown">
