--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s" style="background-image: url('https://raw.githubusercontent.com/Shanila-Khan/FinalProject/master/img/felicia-headshot-1024x1024.png'); background-size: cover; background-position: center;">
+    <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s" style="background-image: url('https://raw.githubusercontent.com/Shanila-Khan/FinalProject/master/img/felicia-headshot-1024x1024.png'); background-size: cover; background-position: center; padding:10%;">
         <div class="container text-center">
             <h1 class="display-4 text-white animated slideInDown mb-4">About Us</h1>
             <nav aria-label="breadcrumb animated slideInDown">
