--- a/contact.html
+++ b/contact.html
@@ -143,18 +143,17 @@
         </div>
     </div>
     <!-- Contact End -->
-<!-- Footer Start -->
+
+   <!-- Footer Start -->
     <div class="container-fluid footer my-6 mb-0 py-6 wow fadeIn text-light" data-wow-delay="0.1s">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Get In Touch</h4>
-
                     <h2 class="text-primary mb-4">
                         <span class="text-grey">Felicia</span>
                         <span class="gradient-text">Day</span>
                     </h2>
-
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
@@ -196,9 +195,6 @@
     </div>
     <!-- Footer End -->
 
-  
-
-
     <!-- Copyright Start -->
     <div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
@@ -208,14 +204,13 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                    <br>Distributed By: <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                    Designed By <a href="https://htmlcodex.com">Shanila/Maryam/Fatima</a>
+                    <br>Distributed By: <a href="https://themewagon.com" target="_blank">Semester Project</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- Copyright End -->
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
