--- a/index.html
+++ b/index.html
@@ -175,122 +175,53 @@
     </div>
     <!-- About End -->
 
+   
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light mt-5 py-5">
+    <div class="container-fluid footer my-6 mb-0 py-6 wow fadeIn text-light" data-wow-delay="0.1s">
         <div class="container">
-<<<<<<< HEAD
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Company</h4>
+                    <h4 class="text-white mb-4">Get In Touch</h4>
+
+                    <h2 class="text-primary mb-4">
+                        <span class="text-grey">Felicia</span>
+                        <span class="gradient-text">Day</span>
+                    </h2>
+
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-light mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">Support</a>
-=======
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-6 mb-4" style="text-align: left, font-family 'Pacifico', cursive; font-size: 60px; color: rgb(122, 127, 148);"><i>Projects</i></h1>
-                 <h6  style="text-align: left, color black">Interested in what Felicia’s working on?</h6>
-
-            </div>
-            <div class="row g-4 justify-content-center">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="courses-item d-flex flex-column bg-white overflow-hidden h-100">
-                        
-                        <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="https://raw.githubusercontent.com/Shanila-Khan/FinalProject/master/img/project 2.jpeg" alt="">
-                            <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">Read More</a>
-                            </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-light mb-4">Popular Links</h4>
+                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="">Our Services</a>
+                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="">Support</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-light mb-4">Newsletter</h4>
+                    <form action="">
+                        <div class="input-group">
+                            <input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
+                            <button class="btn btn-primary">Sign Up</button>
                         </div>
-                    </div>
->>>>>>> e37ed3a86b9a59c42c72842021c13d419706e46b
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Services</h4>
-                    <a class="btn btn-link" href="">SEO Marketing</a>
-                    <a class="btn btn-link" href="">SEO Consultancy</a>
-                    <a class="btn btn-link" href="">Content Marketing</a>
-                    <a class="btn btn-link" href="">Social Media Marketing</a>
-                    <a class="btn btn-link" href="">B2B Marketing</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Quick Links</h4>
-                    <a class="btn btn-link" href="">FAQs</a>
-                    <a class="btn btn-link" href="">Help</a>
-                    <a class="btn btn-link" href="">Examples</a>
-                    <a class="btn btn-link" href="">Stories</a>
-                    <a class="btn btn-link" href="">Testimonial</a>
-                </div>
-<<<<<<< HEAD
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-=======
-                <div class="col-lg-8 my-6 mb-0 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="bg-primary-color:#757575 text-center p-5">
-                        <h1 class="mb-4"  style="text-align: left, font-family 'Pacifico', cursive; font-size: 40px; color: rgb(122, 127, 148);">Appearances</h1>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name">
-                                        <label for="gname">Motor City Comicon</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email">
-                                        <label for="gmail">Detroit, MI</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="cname" placeholder="Child Name">
-                                        <label for="cname">Creation SPN Seattle</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="cage" placeholder="Child Age">
-                                        <label for="cage">Seattle, WA</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                        <label for="message">Creation SPN Austin</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-dark w-100 py-3" type="submit">Comicon The Cruise!</button>
-                                </div>
-                            </div>
-                        </form>
->>>>>>> e37ed3a86b9a59c42c72842021c13d419706e46b
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                        <br>Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="">Home</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
-                            <a href="">FQAs</a>
-                        </div>
+                    </form>
+                    <h6 class="text-white mt-4 mb-3">Follow Us</h6>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
@@ -298,8 +229,6 @@
     </div>
     <!-- Footer End -->
 
-<<<<<<< HEAD
-=======
     <!-- Copyright Start -->
     <div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
@@ -317,7 +246,7 @@
     </div>
     <!-- Copyright End -->
 
->>>>>>> e37ed3a86b9a59c42c72842021c13d419706e46b
+
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
@@ -357,10 +286,5 @@
 </body>
 
 </html>
-<<<<<<< HEAD
-=======
 
-</body>
 
-</html>
->>>>>>> e37ed3a86b9a59c42c72842021c13d419706e46b
